--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <button class="scroll-top" onclick="window.location.href='#'"><i class="fa fa-arrow-up"></i></button>
         <button class="message" onclick="window.location.href='message.html'"><i class="fa fa-comment"></i></button>
         <!-- ======= Hero Section ======= -->
-        <section id="hero" class="d-flex justify-content-center align-items-center">
+        <section id="hero" class="d-flex justify-content-center align-items-center hero">
             <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
                 <h1>Learning Today,<br>Leading Tomorrow</h1>
                 <h2>We are team of professional IT personnels that gives solutions to your problems.</h2>
